--- a/index.css
+++ b/index.css
@@ -12,25 +12,31 @@
 }
 
 .dropdown_container {
-    background-color: #3f5c3f;
-    height: 250px;
-    width: 500px;
+    background-color: #eaecee;
+    height: 220px;
+    width: 470px;
     display: flex;
 }
 
 .media {
     text-align: left;
     padding-top: 20px;
+    z-index: 100;
 }
 
 .media b {
     margin-left: 28px;
+    color: #555;
 
 }
 
 .media li {
     padding: 10px 15px;
+    color: bisque;
 }
+
+
+
 
 .community {
     text-align: left;
@@ -39,6 +45,7 @@
 
 .community b {
     text-align: left;
+    color: #555;
 }
 
 .community li {
@@ -48,16 +55,29 @@
 
 .about {
     text-align: left;
-    padding: 20px 20px;
+    padding: 24px 0px;
 }
 
 .about b {
     text-align: left;
+    margin-left: 20px;
+    color: #555;
+    padding-left: 20px;
 }
 
 .about li {
-    padding: 10px 5px;
+    padding: 12px 5px;
+    padding-left: 20px;
+    
 }
+
+
+.social_icons .icon{
+    display: inline-block;
+    
+}
+
+
 
 .input {
    font-family: 'Montserrat', sans-serif; 
@@ -102,7 +122,7 @@ body {
     background-color: white;
     margin: 0;
     padding: 0;
-    height: 400px;
+    height: 60px;
     display: flex;
     align-items: center;
     position: relative;
@@ -114,7 +134,7 @@ body {
     padding: 5px 15px!important;
     color: #191b26;
     font-size: 14px;
-    font-family: sans-serif;
+    font-family: Arial, Helvetica, sans-serif;
     font-size: 0.9em;
     font-weight: 400;
 }
@@ -124,7 +144,7 @@ body {
     padding: 5px 15px!important;
     color: #191b26;
     font-size: 14px;
-    font-family: sans-serif;
+    font-family: Arial, Helvetica, sans-serif;
     font-size: 0.9em;
     font-weight: 400;
 }
@@ -188,6 +208,27 @@ li a {
     font-weight: 400;
 }
 
+.explore_dropdown {
+    position: absolute;
+    display: none;
+    overflow: auto;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 10;
+    right: 200px;
+    top: 5;
+
+}
+
+.explore-btn {
+    border: none;
+    background-color: transparent;
+    font-size: 14px;
+}
+
+.show {
+    display: block;
+}
+
 
 
 
@@ -217,11 +258,10 @@ li a {
     background-size:cover;
     background-position: center;
     position: relative;
+    z-index: 1;
 }
 
-.main > * {
-    z-index: 10;
-}
+
 
 .main::after {
     position: absolute;
