--- a/index.css
+++ b/index.css
@@ -633,7 +633,7 @@ select {
 
 .images_container {
     height: 1400px;
-    background-color: orchid;
+    /* background-color: orchid; */
     margin-left: 20px;
     margin-right: 20px;
     margin-top: 17px;
@@ -642,7 +642,8 @@ select {
 }
 
 .images .images_container img{
-    /* background-size: cover; */
-    width: auto;
-    height: auto;
-}
+    background-size: cover;
+    width: 250px;
+    height: 300px;
+    margin-right: 10px;
+} 
