--- a/index.css
+++ b/index.css
@@ -641,33 +641,93 @@ select {
 .images .images_container {
     height: 1400px;
     /* background-color: orchid; */
-    margin: auto;
-    padding: 0 1.5rem;
-    margin-top: 17px;
+    padding-left: 20px;
+    padding-right: 20px;
+    margin-top: 20px;
     display: grid;
-    grid-template-columns: repeat(5, 1fr);
-    grid-template-rows: auto;
+    grid-template-columns: repeat(auto-fit, minmax(200px,1fr));
+    grid-auto-rows: 280px;
+    /* grid-template-rows:250px; */
     grid-gap: 6px;
+    grid-auto-flow: dense !important;
+    position: relative;
 }
 
 .images .images_container img{
-    width: 100%;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    position: relative;
-    display: flex;
-    align-items: center;
-    justify-content: center;
     object-fit: cover;
-    height: 100%;
+    background-position: center;
+    background-size:cover;
+    width: 100%;
+    margin: 0;
+    padding: 0;
+    height: 280px;
+}
+ 
+.images .images_container img:nth-child(6){
+    grid-column: span 2;
 }
 
-.images_container img:nth-child(2){
-    grid-column: 2/3;
-
+.images .images_container img:nth-child(16){
+    grid-column: span 2;
 }
 
-img:nth-child(6) {
-    grid-area: 2/2/4/4;
+.images .images_container img:nth-child(8){
+    grid-column: span 2;
 }
+
+.images .images_container img:nth-child(1){
+    grid-column: span 1;
+    grid-row: sapn 1;
+}
+
+.images .images_container img:nth-child(2){
+    grid-column: span 2;
+}
+
+.images .images_container img:nth-child(4){
+    grid-column: span 1;
+}
+
+.images .images_container img:nth-child(5){
+    grid-column: span 2;
+}
+
+.images .images_container img:nth-child(10){
+    grid-column: span 2;
+}
+
+.images .images_container img:nth-child(12){
+    grid-column: span 1;
+}
+
+.images .images_container img:nth-child(14){
+    grid-column: span 1;
+}
+
+.images .images_container img:nth-child(17){
+    grid-column: span 2;
+}
+
+.images .images_container img:nth-child(11){
+    grid-column: span 1;
+}
+
+.images .images_container img:nth-child(14){
+    grid-column: span 2;
+}
+
+.images .images_container img:nth-child(19){
+    grid-column: span 2;
+}
+
+.images .images_container img:nth-child(20){
+    grid-column: span 1;
+}
+
+.images .images_container img:nth-child(3){
+    grid-column: span 2;
+}
+
+
+
+
