--- a/index.css
+++ b/index.css
@@ -1,5 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Lobster&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital@1&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Yanone+Kaffeesatz&display=swap');
+
 
 * {
     margin: 0;
@@ -613,8 +616,85 @@ select {
 }
 
 .footer {
-    height: 300px;
-    background-color: dodgerblue;
+    height: 350px;
+    /* background-color: dodgerblue; */
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+}
+
+.footer a button{
+    position: absolute;
+    top: 40px;
+    border: none;
+    color: white;
+    padding: 12px 60px;
+    background: #1e90ff;
+    border-radius: 20px;
+    font-size: 16px;
+    font-family: sans-serif;
+    font-weight: 400;
+    left: 568px;
+    
+}
+
+.footer a button:hover {
+    background: #1153ff;
+    cursor: pointer;
+}
+
+.footer .footer_data {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+    
+}
+
+.footer .footer_data p:nth-child(1){
+    position: absolute;
+    top: -40px;
+    color: #515457;
+    font-size: 25px;
+}
+
+.footer .footer_data p:nth-child(2){
+    position: absolute;
+    top: 10px;
+    color: #515457;
+    font-size: 25px;
+    font-family: Open Sans, sans-serif;
+}
+
+.footer .footer_data p:nth-child(3){
+    position: relative;
+    top: 60px;
+    width: 800px;
+    text-align: center;
+    color: #515457;
+    font-size: 24px;
+    font-family: Open Sans, sans-serif;
+}
+
+.footer .footer_data button {
+    position: absolute;
+    bottom: -120px;
+    border: none;
+    color: white;
+    padding: 12px 60px;
+    background: #1e90ff;
+    border-radius: 20px;
+    font-size: 16px;
+    font-family: sans-serif;
+    font-weight: 400;
+}
+
+.footer .footer_data button:hover {
+    background: #1153ff;
+    cursor: pointer;
 }
 
 .display-right button {
@@ -644,27 +724,37 @@ select {
     display: flex;
     justify-content: space-between;
     position: absolute;
-    left: 10px;
-    right: 10px;
-    bottom: -10px;
+    left: -10px;
+    right: 0;
+    bottom: -8px;
     opacity: 0;
     transition: all ease .25s;
-    font-size: 16px;
+    font-size: 14px;
     font-weight: 500;
     font-family: monospace;
+    width: auto;
+    padding: 10px 10px 8px 6px;
 }
 
 .image:hover .author_container {
     opacity: 1;
-    background: linear-gradient(linear-gradient(0deg,
-    rgba(0,0,0,.6) 0,transparent));
-    bottom: 6px;
+    background: linear-gradient(180deg,transparent, rgba(57, 57, 57, .05),rgba(57,57,57, .61), rgba(57,57,57, .61));
+    bottom: 0px;
+    height: auto;
+    overflow:visible;
+    left: -10px;
+    right: 0;
+    flex-wrap: wrap-reverse;
 }
 
 .image {
     position: relative;
     width: 100%;
     cursor: pointer;
+}
+
+#author{
+    padding-left: 10px;
 }
 
 .votes div {
@@ -674,6 +764,16 @@ select {
 
 .votes {
     display: flex;
+    padding-right: 10px;
+}
+
+.votes a {
+    text-decoration: none;
+    color: #fff;
+}
+
+.votes a i:hover {
+    background: radial-gradient(#fff 50%, transparent 50%)
 }
 
 .images .images_container .wrapper{
