--- a/index.css
+++ b/index.css
@@ -615,19 +615,67 @@ select {
     color: darkgray;
 }
 
+body{
+    position: relative;
+}
+
 .footer {
-    height: 350px;
+    height: 450px;
     /* background-color: dodgerblue; */
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    position: relative;
+    position: absolute;
+    
+}
+
+@media only screen and (max-width: 800px) {
+    .footer {
+        position: absolute;
+        right: 310px;
+    }
+
+    .images .images_container .footer .footer_data .end_footer {
+        font-size: 16px;
+        width: 600px;
+    }
+
+    .images .images_container .footer a button {
+        position: relative;
+        left: 287px;
+        top: -120px;
+    }
+
+   
+
+    .feature h1{
+        width: auto;
+        font-size: 24px;
+    }
+
+    .feature h4 {
+        font-size: 14.8px;
+    }
+
+    .search_container {
+        min-width: 300px;
+        max-width: 400px;
+        width: 100%;
+    }
+
+    .images .images_container .footer .footer_data a button {
+        position: absolute;
+        top: 128px;
+        left: 192px;
+    }
+
+   
 }
 
 .footer a button{
     position: absolute;
-    top: 40px;
+    top: 50px;
     border: none;
     color: white;
     padding: 12px 60px;
@@ -641,8 +689,8 @@ select {
 }
 
 .footer a button:hover {
-    background: #1153ff;
-    cursor: pointer;
+    background: #1153ff  !important;
+    cursor: pointer !important;
 }
 
 .footer .footer_data {
@@ -651,12 +699,13 @@ select {
     justify-content: center;
     align-items: center;
     position: relative;
+    left: 285px;
     
 }
 
 .footer .footer_data p:nth-child(1){
     position: absolute;
-    top: -40px;
+    top: -80px;
     color: #515457;
     font-size: 25px;
 }
@@ -679,9 +728,10 @@ select {
     font-family: Open Sans, sans-serif;
 }
 
-.footer .footer_data button {
+.footer .footer_data a button {
     position: absolute;
-    bottom: -120px;
+    top: 160px;
+    left: 280px;
     border: none;
     color: white;
     padding: 12px 60px;
@@ -690,9 +740,10 @@ select {
     font-size: 16px;
     font-family: sans-serif;
     font-weight: 400;
+    height: fit-content;
 }
 
-.footer .footer_data button:hover {
+.footer .footer_data a button:hover {
     background: #1153ff;
     cursor: pointer;
 }
@@ -777,13 +828,13 @@ select {
 }
 
 .images .images_container .wrapper{
-    height: 1400px;
+    height: 100%;
     padding-left: 20px;
     padding-right: 20px;
     margin-top: 20px;
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(200px,1fr));
-    grid-auto-rows: 280px;
+    grid-auto-rows: minmax(280px, auto);
     grid-gap: 6px;
     grid-auto-flow: dense !important;
     position: relative;
