--- a/style/index.css
+++ b/style/index.css
@@ -834,7 +834,7 @@ body{
     margin-top: 20px;
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(200px,1fr));
-    grid-auto-rows: minmax(280px, auto);
+    grid-auto-rows: minmax(280px, 310px);
     grid-gap: 6px;
     grid-auto-flow: dense !important;
     position: relative;
@@ -860,8 +860,17 @@ body{
     grid-column: span 2;
 }
 
+.images .images_container .wrapper .image:nth-child(13){
+    grid-column: span 2;
+}
+
 .images .images_container .wrapper .image:nth-child(8){
     grid-column: span 2;
+}
+
+.images .images_container .wrapper .image:nth-child(9){
+    grid-column: span 2;
+    grid-row: 1;
 }
 
 .images .images_container .wrapper .image:nth-child(1){
@@ -874,7 +883,7 @@ body{
 }
 
 .images .images_container .wrapper .image:nth-child(4){
-    grid-column: span 1;
+    grid-column: span 2;
 }
 
 .images .images_container .wrapper .image:nth-child(5){
@@ -886,7 +895,7 @@ body{
 }
 
 .images .images_container .wrapper .image:nth-child(12){
-    grid-column: span 1;
+    grid-column: span 2;
 }
 
 .images .images_container .wrapper .image:nth-child(14){
@@ -898,7 +907,7 @@ body{
 }
 
 .images .images_container .wrapper .image:nth-child(11){
-    grid-column: span 1;
+    grid-column: span 2;
 }
 
 .images .images_container .wrapper .image:nth-child(14){
@@ -906,6 +915,10 @@ body{
 }
 
 .images .images_container .wrapper .image:nth-child(19){
+    grid-column: span 2;
+}
+
+.images .images_container .wrapper .image:nth-child(18){
     grid-column: span 2;
 }
 
