--- a/style/register.css
+++ b/style/register.css
@@ -1,3 +1,10 @@
+@media only screen and (max-width:800px) {
+    .register-header .nav-left .register_search {
+        display: none;
+    }
+}
+
+
 .register-header {
     box-shadow: 0 6px 6px rgba(0,0,0, 0.34)
 }
@@ -77,12 +84,18 @@
     margin: 0;
     height: 800px;
     background-color: #f56;
+    background-image: url(https://images.unsplash.com/photo-1485288734756-0b31a0a31d95?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1500&q=80);
+}
+
+.links {
+    width: 100%;
 }
 
 .register_container {
     margin: auto;
-    border: 1px solid #f3c4e2;
-    background: aliceblue;
+    border: 1px solid #adb5bd;
+    border-radius: 5px;
+    background: white;
     display: flex;
     min-width: 250px;
     max-width: 340px;
@@ -90,6 +103,7 @@
     position: relative;
     top: 100px;
     height: 500px;
+    box-shadow: 3px 2px 4px 0px rgba(100,100,100, 0.4);
 }
 
 .login {
@@ -99,36 +113,80 @@
 }
 
 .register_login {
+    position: absolute;
     text-decoration: none;
-    font-size: 24px;
+    font-size: 22px;
     padding: 2px 5px;
+    top: 16px;
+    left: 100px;
+    color: #adb5bd;
+}
+
+.register_login:hover {
+    color: #0a88d3;
 }
 
 .register_join {
+    position: absolute;
     text-decoration: none;
-    font-size: 24px;
+    font-size: 22px;
     padding: 2px 5px;
+    top: 16px;
+    right: 120px;
+    border-bottom: 3px solid #0a88d3;
+    padding-bottom: 10px;
+    color: #0a88d3;
 }
 
-.social_icons {
+.hr_up {
+    top: 56px;
+    position: absolute;
+    width: 284px;
+    left: 27px;
+    color: 1px solid #eaecee !important;
+}
+
+.register_icons {
     display: flex;
-    justify-content: center;
+    justify-content: space-evenly;
     position: relative;
-    top: 60px;
-    left: 18px;
+    top: 93px;
 }
 
-.social_icons a button {
-    padding: 4px 10px;
-    border-radius: 18px;
+.register_icons a button {
+    padding: 12px 28px;
+    border-radius: 24px;
+    border: none;
+    background:none;
+    cursor: pointer;
 }
 
-.social_icons a:nth-child(1) {
-    margin-right: 20px;
+.register_icons a .register_google:hover {
+    background-color: #a73d32;
 }
 
-.social_icons a:nth-child(2) {
-    margin-left: 20px;
+.register_icons a .register_facebook:hover {
+    background-color: #0b3998;
+}
+
+.register_icons a .register_google {
+    color: white;
+    background-color: #d73d32;
+    font-size: 16px;
+}
+
+.register_icons a .register_facebook {
+    color: white;
+    background-color: #3b5998;
+    font-size: 16px
+}
+
+.hr_middle {
+    top: 170px;
+    position: absolute;
+    width: 284px;
+    left: 27px;
+    color: 1px solid #eaecee !important;
 }
 
 .register_form {
@@ -137,41 +195,62 @@
     align-items: center;
     flex-direction: column;
     position: relative;
-    top: 300px;
+    top: 330px;
     left: 24px;
 }
 
+::placeholder {
+    color: #adb5bd;
+}
+
+.register_form input {
+    position: absolute;
+    transform: translate3d(0, 40px, 0);
+    height: 45px;
+    font-size: 16px;
+    padding-left: 5px;
+    border: 1px solid #adb5bd;
+    border-radius: 4px;
+}
+
+
+
 .register_form input:nth-child(3) {
     position: absolute;
-    bottom: 75px;
+    bottom: 68px;
     left: 4px;
-    height: 30px;
     width: 280px;
 }
 
 .register_form input:nth-child(2){
    position: absolute;
-    bottom: 120px;
+    bottom: 122px;
     left: 4px;
-    height: 30px;
     width: 280px;
 }
 
 .register_form input:nth-child(1) {
     position: absolute;
-    bottom: 165px;
+    bottom: 176px;
     left: 4px;
-    height: 30px;
     width: 280px;
 } 
 
 #register_submit{  
     padding: 13px 135px 13px 135px;
-    border-radius: 18px;
-    left: 24px;
+    border-radius: 22px;
+    position: absolute;
+    top: -40px;
+    left: -1px;
     background: cornflowerblue;
     border: none;
     cursor: pointer;
+    color: white;
+    font-size: 14px;
+}
+
+#register_submit:hover {
+    background-color: #0b6998;
 }
 
 .hr_down {
@@ -180,12 +259,13 @@
     min-width: 200px;
     max-width: 278px;
     width: 100%;
+    transform: translate3d(0, 45px, 0);
     left: 3px;
     border: 5px solid #adb5bd;
 }
 
 .register_terms {
-    background: #f7f;
+    background: #eaecee;
     position: absolute;
     bottom: 0;
     font-size: 13px;
@@ -196,5 +276,11 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    color: rgba(100,100,100, 1);
+}
+
+.register_terms a {
+    color: blue;
+    text-decoration: none;
 }
 
