--- a/style/individual.css
+++ b/style/individual.css
@@ -29,22 +29,57 @@
 }
 
 .image_button {
-    transform: translate3d(0, 35px,0);
+    transform: translate3d(0, 45px,0);
+}
+
+.image_button button {
+    border-radius: 12px;
+}
+
+.individual_like {
+    transform: translate3d(10px, 0, 0);
+    border: transparent;
+    padding: 6px 24px;
+    background-color: #008ddf;
+    color: #fff;
+}
+
+.individual_like:hover {
+    background-color: #0078e7;
+    cursor: pointer;
 }
 
 .individual_share {
-    transform: translate3d(40px,0,0);
+    transform: translate3d(48px,0,0);
     border: transparent;
-    padding: 4px 20px;
+    padding: 6px 36px;
     background: #e6e6e6;
+    cursor: pointer;
+}
+
+.individual_share:hover {
+    background-color: #d6d6d6
 }
 
 .individual_favorite {
     transform: translate3d(30px, 0 ,0);
+    border: transparent;
+    padding: 6px 24px;
+    background-color:#008ddf;
+    color: #fff
+}
+
+.individual_favorite:hover {
+    background-color: #0078e7;
+    cursor: pointer;
+}
+
+.individual_up {
+    transform: translate3d(0, 20px, 0);
 }
 
 .individual_down {
-    transform: translate3d(0, 70px, 0);
+    transform: translate3d(0, 74px, 0);
     width: 300px;
 }
 
