--- a/style/vector.css
+++ b/style/vector.css
@@ -5,7 +5,7 @@
     align-items:center;
     flex-direction: column;
     position: relative;
-    background-image: url(https://cdn.pixabay.com/photo/2021/02/03/17/36/river-5978743_960_720.jpg);
+    background-image: url(https://images.unsplash.com/photo-1485627941502-d2e6429a8af0?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=750&q=80);
     background-position: center;
     background-size: cover;
 }
