--- a/style/illustration.css
+++ b/style/illustration.css
@@ -1,26 +1,27 @@
-.main .photo_feature .search_container .search_arrow {
+.main .illustration_feature .search_container .search_arrow {
     margin-top: -1px;
     margin-left: 6px;
     font-size: 1.2em;
     color: darkgray;
 }
 
+
 @media only screen and (max-width: 760px) {
-    .main .photo_feature .search_container {
+    .main .illustration_feature .search_container {
         min-width: 650px !important;
         max-width: 660px;
         width: 100%;
     }
 
-    .main .photo_feature h4 {
+    .main .illustration_feature h4 {
         margin-left: 20px;
     }
      
-    .main .photo_feature .search_container .feature_search {
+    .main .illustration_feature .search_container .feature_search {
         margin-left: 25px;
     }
 
-    .main .photo_feature .search_container .default_item {
+    .main .illustration_feature .search_container .default_item {
         position: absolute;
         display: flex;
         right: 20px;
@@ -36,15 +37,15 @@
         
     }
 
-   .main .photo_feature .search_container .default_item .search_arrow {
+   .main .illustration_feature .search_container .default_item .search_arrow {
        margin-left: 4px;
    }
 
-    .main .photo_feature .popular_Images_line {
+    .main .illustration_feature .popular_Images_line {
         margin-left: 30px
     }
 
-    .main .photo_feature .search_container #Search {
+    .main .illustration_feature .search_container #Search {
         /* border: 1px solid black; */
         width: 450px;
         display:flex;
@@ -53,7 +54,7 @@
         /* border: none; */
     }
 
-    .main .photo_feature .search_container .feature_search {
+    .main .illustration_feature .search_container .feature_search {
         position: absolute;
         z-index: 1;
         left: 2px;
@@ -84,25 +85,25 @@
 
 
 
-.photo_feature {
+.illustration_feature {
     height: 550px;
     display: flex;
     justify-content: center;
     align-items:center;
     flex-direction: column;
     position: relative;
-    background-image: url(https://cdn.pixabay.com/photo/2021/02/03/17/36/river-5978743_960_720.jpg);
+    background-image: url(https://cdn.pixabay.com/photo/2016/12/10/02/05/blue-1896491_960_720.jpg);
     background-position: center;
     background-size: cover;
 }
 
-.photo_feature h1, .photo_feature h4, .photo_feature .search_container {
+.illustration_feature h1, .illustration_feature h4, .illustration_feature .search_container {
     z-index: 1;
 }
 
 
 
-.photo_feature::after {
+.illustration_feature::after {
     content: '';
     position: absolute;
     top: 0;
@@ -113,7 +114,7 @@
 
 }
 
-.photo_feature h1{
+.illustration_feature h1{
     position: absolute;
     top: 0;
     display: flex;
@@ -122,7 +123,7 @@
     margin-top: 125px;
 }
 
-.photo_feature h4{
+.illustration_feature h4{
     position:absolute;
     top: 40px;
     display: flex;
@@ -134,17 +135,17 @@
 
 @media only screen and (max-width: 800px) {   
 
-    .photo_feature h1{
+    .illustration_feature h1{
         width: auto;
         font-size: 24px;
     }
 
-    .photo_feature h4 {
+    .illustration_feature h4 {
         font-size: 14.8px;
     }   
 }
 
-.images .images_container .photo_wrapper{
+.images .images_container .illustration_wrapper{
     height: 100%;
     padding-left: 20px;
     padding-right: 20px;
@@ -157,7 +158,7 @@
     position: relative;
 }
 
-.images .images_container .photo_wrapper .image img{
+.images .images_container .illustration_wrapper .image img{
     object-fit: cover;
     background-position: center;
     background-size:cover;
@@ -167,95 +168,82 @@
     height: 100%;
 }
 
-.images .images_container .photo_wrapper{
-    height: 100%;
-    padding-left: 20px;
-    padding-right: 20px;
-    margin-top: 20px;
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(200px,1fr));
-    grid-auto-rows: minmax(280px, 310px);
-    grid-gap: 20px;
-    grid-auto-flow: dense !important;
-    position: relative;
-}
 
-
-.images .images_container .photo_wrapper .image:nth-child(6){
+.images .images_container .illustration_wrapper .image:nth-child(6){
     grid-column: span 2;
     grid-row: span 1;
 }
 
-.images .images_container .photo_wrapper .image:nth-child(16){
+.images .images_container .illustration_wrapper .image:nth-child(16){
     grid-column: span 2;
 }
 
-.images .images_container .photo_wrapper .image:nth-child(13){
+.images .images_container .illustration_wrapper .image:nth-child(13){
     grid-column: span 2;
 }
 
-.images .images_container .photo_wrapper .image:nth-child(8){
+.images .images_container .illustration_wrapper .image:nth-child(8){
     grid-column: span 2;
 }
 
-.images .images_container .photo_wrapper .image:nth-child(9){
+.images .images_container .illustration_wrapper .image:nth-child(9){
     grid-column: span 2;
     grid-row: 1;
 }
 
-.images .images_container .photo_wrapper .image:nth-child(1){
+.images .images_container .illustration_wrapper .image:nth-child(1){
     grid-column: span 1;
     grid-row: sapn 1;
 }
 
-.images .images_container .photo_wrapper .image:nth-child(2){
+.images .images_container .illustration_wrapper .image:nth-child(2){
     grid-column: span 2;
 }
 
-.images .images_container .photo_wrapper .image:nth-child(4){
+.images .images_container .illustration_wrapper .image:nth-child(4){
     grid-column: span 2;
 }
 
-.images .images_container .photo_wrapper .image:nth-child(5){
+.images .images_container .illustration_wrapper .image:nth-child(5){
     grid-column: span 2;
 }
 
-.images .images_container .photo_wrapper .image:nth-child(10){
+.images .images_container .illustration_wrapper .image:nth-child(10){
     grid-column: span 2;
 }
 
-.images .images_container .photo_wrapper .image:nth-child(12){
+.images .images_container .illustration_wrapper .image:nth-child(12){
     grid-column: span 2;
 }
 
-.images .images_container .photo_wrapper .image:nth-child(14){
+.images .images_container .illustration_wrapper .image:nth-child(14){
     grid-column: span 1;
 }
 
-.images .images_container .photo_wrapper .image:nth-child(17){
+.images .images_container .illustration_wrapper .image:nth-child(17){
     grid-column: span 2;
 }
 
-.images .images_container .photo_wrapper .image:nth-child(11){
+.images .images_container .illustration_wrapper .image:nth-child(11){
     grid-column: span 2;
 }
 
-.images .images_container .photo_wrapper .image:nth-child(14){
+.images .images_container .illustration_wrapper .image:nth-child(14){
     grid-column: span 2;
 }
 
-.images .images_container .photo_wrapper .image:nth-child(19){
+.images .images_container .illustration_wrapper .image:nth-child(19){
     grid-column: span 2;
 }
 
-.images .images_container .photo_wrapper .image:nth-child(18){
+.images .images_container .illustration_wrapper .image:nth-child(18){
     grid-column: span 2;
 }
 
-.images .images_container .photo_wrapper .image:nth-child(20){
+.images .images_container .illustration_wrapper .image:nth-child(20){
     grid-column: span 1;
 }
 
-.images .images_container .photo_wrapper .image:nth-child(3){
+.images .images_container .illustration_wrapper .image:nth-child(3){
     grid-column: span 2;
 }
