--- a/style/index.css
+++ b/style/index.css
@@ -783,7 +783,7 @@ body{
     position: relative;
     width: 100%;
     cursor: pointer;
-    border: 1px solid #ffb;
+    border: 1px solid #fef;
 }
 
 #author{
@@ -817,7 +817,7 @@ body{
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(200px,1fr));
     grid-auto-rows: minmax(280px, 310px);
-    grid-gap: 10px;
+    grid-gap: 20px;
     grid-auto-flow: dense !important;
     position: relative;
 }
