--- a/style/register.css
+++ b/style/register.css
@@ -83,7 +83,7 @@
     padding: 0;
     margin: 0;
     height: 800px;
-    background-color: #f56;
+    /* background-color: #f56; */
     background-image: url(https://images.unsplash.com/photo-1485288734756-0b31a0a31d95?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1500&q=80);
 }
 
