--- a/style/myprofile.css
+++ b/style/myprofile.css
@@ -72,19 +72,100 @@
     background-position: center;
 }
 
+
 .myprofile_images {
-    margin: 20px 16px 10px 16px;
+    background-color: #ccc;
+}
+
+.myprofile_images_container {
+    padding-top: 20px;
+    margin-right: 20px;
+    margin-left: 20px;
+    height: 1000px;
+    
 }
 
 .myprofile_images_wrapper {
-    height: 500px;
-    width: 100%;
+    height: 100%;
+    margin-top: 20px;
     display: grid;
-    background: violet;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-auto-rows: minmax(320px, 350px);
+    grid-gap: 20px;
+    grid-auto-flow: dense !important;
+    position: relative;
+    
 }
 
 .myprofile_images_wrapper img {
-    width: auto;
-    height: 350px;
+    object-fit: cover;
+    background-position: center;
+    background-size:cover;
+    width: 100%;
+    margin: 0;
+    padding: 0;
+    height: 100%;
 }
+
+.author_container {
+    margin-left: 10px;
+    color: #fff;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    position: absolute;
+    left: -10px;
+    right: 0;
+    bottom: -8px;
+    opacity: 0;
+    transition: all ease .25s;
+    font-size: 14px;
+    font-weight: 500;
+    font-family: monospace;
+    width: auto;
+    padding: 40px 10px 4px 6px;
+    transition-timing-function: cubic-bezier(0, 1, 0.5, 1);
+}
+
+.my_image:hover .author_container {
+    opacity: 1;
+    background: linear-gradient(180deg,transparent, rgba(57, 57, 57, .05),rgba(57,57,57, .61), rgba(57,57,57, .61));
+    bottom: 0px;
+    height: 40px;
+    overflow:visible;
+    left: -10px;
+    right: 0;
+    flex-wrap: wrap-reverse;
+}
+
+.my_image {
+    position: relative;
+    width: 100%;
+    cursor: pointer;
+    border: 1px solid #ccc;
+}
+
+#author{
+    padding-left: 10px;
+}
+
+.votes div {
+    margin-left: 8px;
+}
+
+
+.votes {
+    display: flex;
+    padding-right: 10px;
+}
+
+.votes a {
+    text-decoration: none;
+    color: #fff;
+}
+
+.votes a i:hover {
+    background: radial-gradient(#fff 50%, transparent 50%)
+}
+
 
