--- a/style/myprofile.css
+++ b/style/myprofile.css
@@ -101,7 +101,7 @@
     object-fit: cover;
     background-position: center;
     background-size:cover;
-    width: 100%;
+    width: 550px;
     margin: 0;
     padding: 0;
     height: 100%;
@@ -114,8 +114,8 @@
     justify-content: space-between;
     align-items: center;
     position: absolute;
-    left: -10px;
-    right: 0;
+    left: 0;
+    right: px;
     bottom: -8px;
     opacity: 0;
     transition: all ease .25s;
@@ -134,7 +134,7 @@
     height: 40px;
     overflow:visible;
     left: -10px;
-    right: 0;
+    right: 2px;
     flex-wrap: wrap-reverse;
 }
 
