--- a/style/settings.css
+++ b/style/settings.css
@@ -29,7 +29,7 @@
     align-items: center;
     flex-direction: column;
     
-    border: 1px solid #ccc;
+    /* border: 1px solid #ccc; */
 }
 
 .left_column {
