--- a/style/index.css
+++ b/style/index.css
@@ -161,7 +161,7 @@ body {
     width: 40px;
     border-radius: 50%;
     background-color: #4b0082;
-    background-image: url(https://cdn.business2community.com/wp-content/uploads/2017/08/blank-profile-picture-973460_640.png);
+    background-image: url(https://i.pinimg.com/originals/fb/25/ac/fb25ac2832194c7494ef28bd5e33d9eb.jpg);
     background-size: cover;
     background-position: center;
     cursor: pointer;
